--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -7,11 +8,33 @@
     <title>Traditional | Ecommerce web site</title>
     <link rel="stylesheet" href="style.css">
 </head>
+
 <body>
-    <div class="navbar">
-        <div class="logo">
-            <img src="images/logo.png" alt="" width="125px">
+
+    <div class="container">
+        <div class="navbar">
+            <div class="logo">
+                <img src="images/logo.png" alt="" width="125px">
+            </div>
+            <nav>
+                <ul>
+                    <li><a href="#">Home</a></li>
+                    <li><a href="#">Porduct</a></li>
+                    <li><a href="#">About</a></li>
+                    <li><a href="#">Contact</a></li>
+                    <li><a href="#">Account</a></li>
+                </ul>
+            </nav>
         </div>
+    
+    <div class="row">
+        <div class="col-2">
+            <h1>Give Your Workout <br> A New Style!</h1>
+            <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Commodi expedita aliquam <br> illo debitis odit, ad sunt labore praesentium ullam voluptatibus?</p>
+        </div>
+        <div class="col-2"></div>
     </div>
+</div>
 </body>
+
 </html>
