--- a/index.html
+++ b/index.html
@@ -7,34 +7,43 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Traditional | Ecommerce web site</title>
     <link rel="stylesheet" href="style.css">
+
+    <link
+        href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700&family=Roboto:ital,wght@1,100&display=swap"
+        rel="stylesheet">
 </head>
 
 <body>
-
-    <div class="container">
-        <div class="navbar">
-            <div class="logo">
-                <img src="images/logo.png" alt="" width="125px">
+    <div class="header">
+        <div class="container">
+            <div class="navbar">
+                <div class="logo">
+                    <img src="images/logo.png" alt="" width="125px">
+                </div>
+                <nav>
+                    <ul>
+                        <li><a href="#">Home</a></li>
+                        <li><a href="#">Porduct</a></li>
+                        <li><a href="#">About</a></li>
+                        <li><a href="#">Contact</a></li>
+                        <li><a href="#">Account</a></li>
+                    </ul>
+                </nav>
             </div>
-            <nav>
-                <ul>
-                    <li><a href="#">Home</a></li>
-                    <li><a href="#">Porduct</a></li>
-                    <li><a href="#">About</a></li>
-                    <li><a href="#">Contact</a></li>
-                    <li><a href="#">Account</a></li>
-                </ul>
-            </nav>
+
+            <div class="row">
+                <div class="col-2">
+                    <h1>Give Your Workout <br> A New Style!</h1>
+                    <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Commodi expedita aliquam <br> illo
+                        debitis odit, ad sunt labore praesentium ullam voluptatibus?</p>
+                    <a href="" class="btn">Explore Now &#8594;</a>
+                </div>
+                <div class="col-2">
+                    <img src="images/image1.png" alt="">
+                </div>
+            </div>
         </div>
-    
-    <div class="row">
-        <div class="col-2">
-            <h1>Give Your Workout <br> A New Style!</h1>
-            <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Commodi expedita aliquam <br> illo debitis odit, ad sunt labore praesentium ullam voluptatibus?</p>
-        </div>
-        <div class="col-2"></div>
     </div>
-</div>
 </body>
 
 </html>
