--- a/index.html
+++ b/index.html
@@ -29,6 +29,7 @@
                         <li><a href="#">Account</a></li>
                     </ul>
                 </nav>
+                <img src="images/cart.png" alt="" width="25px" height="25px">
             </div>
 
             <div class="row">
@@ -41,6 +42,38 @@
                 <div class="col-2">
                     <img src="images/image1.png" alt="">
                 </div>
+            </div>
+        </div>
+    </div>
+
+
+    <!-- featured categoris -->
+
+    <div class="categoris">
+        <div class="small-container">
+            <div class="row">
+                <div class="col-3">
+                    <img src="images/category-1.jpg" alt="">
+                </div>
+                <div class="col-3">
+                    <img src="images/category-2.jpg" alt="">
+                </div>
+                <div class="col-3">
+                    <img src="images/category-3.jpg" alt="">
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <!-- featured product -->
+
+    <div class="small-container">
+        <h2>Feauterd Porduct</h2>
+        <div class="row">
+            <div class="col-4">
+                <img src="images/product-1.jpg" alt="">
+                <h4>Red Orinted T-shirt</h4>
+                <p>$50.00</p>
             </div>
         </div>
     </div>
